--- a/templates/competitions/competition_detail.html
+++ b/templates/competitions/competition_detail.html
@@ -98,41 +98,96 @@
                     {% endfor %}
                 </ul>
 
-                <div class="tab-content px-3" id="divisionsTabContent">
-                    {% for division in competition.allowed_divisions.all %}
-                    <div class="tab-pane fade {% if forloop.first %}show active{% endif %}" id="division-{{ division.id }}" role="tabpanel" aria-labelledby="division-{{ division.id }}-tab">
-                        <div class="table-responsive">
-                            <table class="table table-striped table-bordered align-middle">
-                                <thead class="table-dark">
-                                    <tr>
-                                        <th>Weight Class</th>
-                                        {% for event_order in ordered_events %}
-                                        <th>{{ event_order.event.name|capfirst }} ({{ event_order.event.weight_type|capfirst }})</th>
-                                        {% endfor %}
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    {% for weight_class in competition.allowed_weight_classes.all %}
-                                    <tr>
-                                        <td>{{ weight_class.name }}</td>
-                                        {% for event_order in ordered_events %}
-                                        <td>
-                                            {% for group in event_order.event.implements.all|group_implements %}
-                                            {{ group.name|capfirst }}: 
-                                            {% for implement in group.implements %}
-                                            {{ implement.weight }} {{ implement.get_weight_unit_display }}
+                <div class="tab-content" id="divisionsTabContent">
+    {% for division in competition.allowed_divisions.all %}
+    <div class="tab-pane fade {% if forloop.first %}show active{% endif %}" id="division-{{ division.id }}" role="tabpanel" aria-labelledby="division-{{ division.id }}-tab">
+        <!-- Secondary Gender Tabs -->
+        <ul class="nav nav-pills mt-3" id="genderTab-{{ division.id }}" role="tablist">
+            <li class="nav-item">
+                <button class="nav-link active" id="male-{{ division.id }}-tab" data-bs-toggle="tab" data-bs-target="#male-{{ division.id }}" type="button" role="tab" aria-controls="male-{{ division.id }}" aria-selected="true">
+                    Male
+                </button>
+            </li>
+            <li class="nav-item">
+                <button class="nav-link" id="female-{{ division.id }}-tab" data-bs-toggle="tab" data-bs-target="#female-{{ division.id }}" type="button" role="tab" aria-controls="female-{{ division.id }}" aria-selected="false">
+                    Female
+                </button>
+            </li>
+        </ul>
+
+        <div class="tab-content mt-3" id="genderTabContent-{{ division.id }}">
+            <!-- Male Weight Classes -->
+            <div class="tab-pane fade show active" id="male-{{ division.id }}" role="tabpanel" aria-labelledby="male-{{ division.id }}-tab">
+                <div class="table-responsive">
+                    <table class="table table-striped table-bordered align-middle">
+                        <thead class="table-dark">
+                            <tr>
+                                <th>Weight Class</th>
+                                {% for event_order in ordered_events %}
+                                <th>{{ event_order.event.name|capfirst }} ({{ event_order.event.weight_type|capfirst }})</th>
+                                {% endfor %}
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for weight_class in div_gender_weight_classes|get_item:division|get_item:'Male' %}
+                            <tr>
+                                <td>{{ weight_class.name }} ({{ weight_class.gender }})</td>
+                                {% for event_order in ordered_events %}
+                                <td>
+                                    {% with event_implements=event_implements|get_item:event_order.event.id %}
+                                        {% with implements=event_implements|get_item:weight_class.id %}
+                                            {% for implement in implements %}
+                                                {{ implement.weight }} {{ implement.get_weight_unit_display }}
                                             {% endfor %}
-                                            {% endfor %}
-                                        </td>
-                                        {% endfor %}
-                                    </tr>
-                                    {% endfor %}
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                    {% endfor %}
+                                        {% endwith %}
+                                    {% endwith %}
+                                </td>
+                                {% endfor %}
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
                 </div>
+            </div>
+
+            <!-- Female Weight Classes -->
+            <div class="tab-pane fade" id="female-{{ division.id }}" role="tabpanel" aria-labelledby="female-{{ division.id }}-tab">
+                <div class="table-responsive">
+                    <table class="table table-striped table-bordered align-middle">
+                        <thead class="table-dark">
+                            <tr>
+                                <th>Weight Class</th>
+                                {% for event_order in ordered_events %}
+                                <th>{{ event_order.event.name|capfirst }} ({{ event_order.event.weight_type|capfirst }})</th>
+                                {% endfor %}
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for weight_class in div_gender_weight_classes|get_item:division|get_item:'Female' %}
+                            <tr>
+                                <td>{{ weight_class.name }} ({{ weight_class.gender }})</td>
+                                {% for event_order in ordered_events %}
+                                <td>
+                                    {% with event_implements=event_implements|get_item:event_order.event.id %}
+                                        {% with implements=event_implements|get_item:weight_class.id %}
+                                            {% for implement in implements %}
+                                                {{ implement.weight }} {{ implement.get_weight_unit_display }}
+                                            {% endfor %}
+                                        {% endwith %}
+                                    {% endwith %}
+                                </td>
+                                {% endfor %}
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+</div>
+
             </div>
         </div>
     </div>
@@ -145,5 +200,32 @@
             <a href="{% url 'competitions:competition_scorecard' competition.pk %}" class="btn btn-primary">View Scorecard</a>
         </div>
     </div>
+
+{% if competition.organizer == request.user %}
+    <h4 class="text-center">Competition Management</h4>
+    <div class="organizer-actions text-center">
+        <div class="row">
+            <div class="col-sm-2" style="padding-top:10px;">
+                <a href="{% url 'competitions:competition_update' competition.pk %}" class="btn btn-secondary me-2">Edit Competition</a>
+            </div>
+            <div class="col-sm-2" style="padding-top:10px;">
+                <a href="{% url 'competitions:competition_delete' competition.pk %}" class="btn btn-danger me-2">Delete Competition</a>
+            </div>
+            <div class="col-sm-2" style="padding-top:10px;">
+                <a href="{% url 'competitions:sponsor_logo_upload' competition.pk %}" class="btn btn-secondary me-2">Upload Sponsor Logos</a>
+            </div>
+            <div class="col-sm-2" style="padding-top:10px;">
+                <a href="{% url 'competitions:event_create' competition.pk %}" class="btn btn-primary me-2">Add Event</a>
+            </div>
+            <div class="col-sm-2" style="padding-top:10px;">
+                <a href="{% url 'competitions:competition_score' competition.pk %}" class="btn btn-primary me-2">Manage Scores</a>
+            </div>
+            <div class="col-sm-2" style="padding-top:10px;">
+                <a href="{% url 'competitions:commentator_comp_card' competition.id %}" class="btn btn-primary me-2">Competition Card</a>
+            </div>
+        </div>
+    </div>
+{% endif %}
+<br>
 </div>
 {% endblock %}
