--- a/templates/competitions/competition_detail.html
+++ b/templates/competitions/competition_detail.html
@@ -87,107 +87,53 @@
                 </div>
                 {% endif %}
 
-                <h3 class="text-center"><b>Divisions and Events</b></h3>
-                <ul class="nav nav-tabs" id="divisionsTab" role="tablist">
-                    {% for division in competition.allowed_divisions.all %}
-                    <li class="nav-item">
-                        <button class="nav-link {% if forloop.first %}active{% endif %}" id="division-{{ division.id }}-tab" data-bs-toggle="tab" data-bs-target="#division-{{ division.id }}" type="button" role="tab" aria-controls="division-{{ division.id }}" aria-selected="{% if forloop.first %}true{% else %}false{% endif %}">
-                            {{ division.name|capfirst }}
-                        </button>
-                    </li>
-                    {% endfor %}
-                </ul>
+                <h3 class="text-center mt-5"><b>Divisions and Events</b></h3>
+            <ul class="nav nav-tabs" id="divisionsTab" role="tablist">
+                {% for division in competition.allowed_divisions.all %}
+                <li class="nav-item">
+                    <button class="nav-link {% if forloop.first %}active{% endif %}" id="division-{{ division.id }}-tab" data-bs-toggle="tab" data-bs-target="#division-{{ division.id }}" type="button" role="tab" aria-controls="division-{{ division.id }}" aria-selected="{% if forloop.first %}true{% else %}false{% endif %}">
+                        {{ division.name|capfirst }}
+                    </button>
+                </li>
+                {% endfor %}
+            </ul>
 
-                <div class="tab-content" id="divisionsTabContent">
-    {% for division in competition.allowed_divisions.all %}
-    <div class="tab-pane fade {% if forloop.first %}show active{% endif %}" id="division-{{ division.id }}" role="tabpanel" aria-labelledby="division-{{ division.id }}-tab">
-        <!-- Secondary Gender Tabs -->
-        <ul class="nav nav-pills mt-3" id="genderTab-{{ division.id }}" role="tablist">
-            <li class="nav-item">
-                <button class="nav-link active" id="male-{{ division.id }}-tab" data-bs-toggle="tab" data-bs-target="#male-{{ division.id }}" type="button" role="tab" aria-controls="male-{{ division.id }}" aria-selected="true">
-                    Male
-                </button>
-            </li>
-            <li class="nav-item">
-                <button class="nav-link" id="female-{{ division.id }}-tab" data-bs-toggle="tab" data-bs-target="#female-{{ division.id }}" type="button" role="tab" aria-controls="female-{{ division.id }}" aria-selected="false">
-                    Female
-                </button>
-            </li>
-        </ul>
-
-        <div class="tab-content mt-3" id="genderTabContent-{{ division.id }}">
-            <!-- Male Weight Classes -->
-            <div class="tab-pane fade show active" id="male-{{ division.id }}" role="tabpanel" aria-labelledby="male-{{ division.id }}-tab">
-                <div class="table-responsive">
-                    <table class="table table-striped table-bordered align-middle">
-                        <thead class="table-dark">
-                            <tr>
-                                <th>Weight Class</th>
-                                {% for event_order in ordered_events %}
-                                <th>{{ event_order.event.name|capfirst }} ({{ event_order.event.weight_type|capfirst }})</th>
-                                {% endfor %}
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for weight_class in div_gender_weight_classes|get_item:division|get_item:'Male' %}
-                            <tr>
-                                <td>{{ weight_class.name }} ({{ weight_class.gender }})</td>
-                                {% for event_order in ordered_events %}
-                                <td>
-                                    {% with event_implements=event_implements|get_item:event_order.event.id %}
-                                        {% with implements=event_implements|get_item:weight_class.id %}
-                                            {% for implement in implements %}
-                                                {{ implement.weight }} {{ implement.get_weight_unit_display }}
+            <div class="tab-content mt-3" id="divisionsTabContent">
+                {% for division in competition.allowed_divisions.all %}
+                <div class="tab-pane fade {% if forloop.first %}show active{% endif %}" id="division-{{ division.id }}" role="tabpanel" aria-labelledby="division-{{ division.id }}-tab">
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered align-middle">
+                            <thead class="table-dark">
+                                <tr>
+                                    <th>Weight Class</th>
+                                    {% for event_order in ordered_events %}
+                                    <th>{{ event_order.event.name|capfirst }} ({{ event_order.event.weight_type|capfirst }})</th>
+                                    {% endfor %}
+                                </tr>
+                            </thead>
+                                    <tbody>
+                                    {% for weight_class in competition.allowed_weight_classes.all %}
+                                    <tr>
+                                        <td>{{ weight_class.name }} ({{ weight_class.gender }})</td>
+                                        {% for event_order in ordered_events %}
+                                        <td>
+                                            {% for implement in event_order.event.implements.all %}
+                                                {# Ensure the division_weight_class matches the current weight_class #}
+                                                {% if implement.division_weight_class.weight_class == weight_class %}
+                                                    {{ implement.implement_name|capfirst }}: 
+                                                    {{ implement.weight }} {{ implement.get_weight_unit_display }}
+                                                {% endif %}
                                             {% endfor %}
-                                        {% endwith %}
-                                    {% endwith %}
-                                </td>
-                                {% endfor %}
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
+                                        </td>
+                                        {% endfor %}
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                        </table>
+                    </div>
                 </div>
+                {% endfor %}
             </div>
-
-            <!-- Female Weight Classes -->
-            <div class="tab-pane fade" id="female-{{ division.id }}" role="tabpanel" aria-labelledby="female-{{ division.id }}-tab">
-                <div class="table-responsive">
-                    <table class="table table-striped table-bordered align-middle">
-                        <thead class="table-dark">
-                            <tr>
-                                <th>Weight Class</th>
-                                {% for event_order in ordered_events %}
-                                <th>{{ event_order.event.name|capfirst }} ({{ event_order.event.weight_type|capfirst }})</th>
-                                {% endfor %}
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for weight_class in div_gender_weight_classes|get_item:division|get_item:'Female' %}
-                            <tr>
-                                <td>{{ weight_class.name }} ({{ weight_class.gender }})</td>
-                                {% for event_order in ordered_events %}
-                                <td>
-                                    {% with event_implements=event_implements|get_item:event_order.event.id %}
-                                        {% with implements=event_implements|get_item:weight_class.id %}
-                                            {% for implement in implements %}
-                                                {{ implement.weight }} {{ implement.get_weight_unit_display }}
-                                            {% endfor %}
-                                        {% endwith %}
-                                    {% endwith %}
-                                </td>
-                                {% endfor %}
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
-    {% endfor %}
-</div>
-
             </div>
         </div>
     </div>
