--- a/templates/competitions/competition_list.html
+++ b/templates/competitions/competition_list.html
@@ -86,7 +86,7 @@
                             {% if tag.name == 'Pro/Am' %}bg-primary
                             {% elif tag.name == 'Masters Only' %}bg-secondary
                             {% elif tag.name == 'Novice Only' %}bg-success
-                            {% elif tag.name == 'Record Setter' %}bg-danger
+                            {% elif tag.name == 'Record Setter' %}bg-warning
                             {% elif tag.name == 'All-Women' %}bg-warning
                             {% elif tag.name == 'Charity' %}bg-info
                             {% elif tag.name == 'Qualifier' %}bg-dark
